refactor: switch to sql db
