# backend/internal/controller/task.go
@@ -8,7 +8,7 @@ import (
 	"github.com/julianstephens/distributed-task-scheduler/backend/internal/service"
 	"github.com/julianstephens/distributed-task-scheduler/backend/pkg/httputil"
 	"github.com/julianstephens/distributed-task-scheduler/backend/pkg/logger"
-	"github.com/julianstephens/distributed-task-scheduler/backend/pkg/model"
+	"github.com/julianstephens/distributed-task-scheduler/backend/pkg/model/table"
 	gonanoid "github.com/matoous/go-nanoid/v2"
 )
 
@@ -17,13 +17,13 @@ import (
 // @Description retrieves all tasks
 // @Tags tasks
 // @Security ApiKey
-// @Success 200 {object} httputil.HTTPResponse[[]model.Task]
+// @Success 200 {object} httputil.HTTPResponse[[]table.Task]
 // @Failure 500 {object} httputil.HTTPError
 // @Router /tasks [get]
 func (base *Controller) GetTasks(c *gin.Context) {
 	logger.Infof("retrieving all tasks")
 
-	tasks, err := service.GetAll[model.Task](base.DB, base.Config.TaskTableName)
+	tasks, err := service.GetAll[table.Task](base.DB)
 	if err != nil {
 		httputil.NewError(c, http.StatusInternalServerError, err)
 		return
@@ -38,14 +38,14 @@ func (base *Controller) GetTasks(c *gin.Context) {
 // @Param task_id path string true "Task ID"
 // @Tags tasks
 // @Security ApiKey
-// @Success 200 {object} httputil.HTTPResponse[model.Task]
+// @Success 200 {object} httputil.HTTPResponse[table.Task]
 // @Failure 500 {object} httputil.HTTPError
 // @Router /tasks/{task_id} [get]
 func (base *Controller) GetTask(c *gin.Context) {
 	id := c.Param("task_id")
 	logger.Infof("retrieving task %s", id)
 
-	task, err := service.FindById[model.Task](base.DB, id, base.Config.TaskTableName)
+	task, err := service.FindById[table.Task](base.DB, id)
 	if err != nil {
 		httputil.NewError(c, http.StatusInternalServerError, err)
 		return
@@ -54,19 +54,20 @@ func (base *Controller) GetTask(c *gin.Context) {
 	httputil.NewResponse(c, task, httputil.Options{IsCrudHandler: true, HttpMsgMethod: httputil.Get})
 }
 
-// PutTask godoc
-// @Summary Put a task
-// @Description creates or updates a task
+// CreateTask godoc
+// @Summary Create a task
+// @Description creates a new task
+// @Param data body table.Task true "Task data"
 // @Tags tasks
 // @Security ApiKey
-// @Success 200 {object} httputil.HTTPResponse[model.Task]
+// @Success 200 {object} httputil.HTTPResponse[table.Task]
 // @Failure 400 {object} httputil.HTTPError
 // @Failure 500 {object} httputil.HTTPError
-// @Router /tasks [put]
-func (base *Controller) PutTask(c *gin.Context) {
-	logger.Infof("putting task")
+// @Router /tasks [post]
+func (base *Controller) CreateTask(c *gin.Context) {
+	logger.Infof("creating task")
 
-	var task model.Task
+	var task table.Task
 
 	if err := c.ShouldBindJSON(&task); err != nil {
 		httputil.HandleFieldError(c, err)
@@ -81,12 +82,11 @@ func (base *Controller) PutTask(c *gin.Context) {
 		}
 		task.ID = id
 		task.CreatedAt = time.Now().Unix()
-		task.Version = base.Config.TaskTableVersion
 	}
 
 	task.UpdatedAt = time.Now().Unix()
 
-	newTask, err := service.Put[model.Task](base.DB, task, base.Config.TaskTableName)
+	newTask, err := service.Create[table.Task](base.DB, task)
 	if err != nil {
 		httputil.NewError(c, http.StatusInternalServerError, err)
 		return
@@ -101,7 +101,7 @@ func (base *Controller) PutTask(c *gin.Context) {
 // @Tags tasks
 // @Param task_id path string true "Task ID"
 // @Security ApiKey
-// @Success 200 {object} httputil.HTTPResponse[model.Task]
+// @Success 200 {object} httputil.HTTPResponse[table.Task]
 // @Failure 400 {object} httputil.HTTPError
 // @Failure 500 {object} httputil.HTTPError
 // @Router /tasks/{task_id} [delete]
@@ -109,7 +109,7 @@ func (base *Controller) DeleteTask(c *gin.Context) {
 	id := c.Param("task_id")
 	logger.Infof("deleting task %s", id)
 
-	err := service.Delete[model.Task](base.DB, id, base.Config.TaskTableName)
+	_, err := service.Delete(base.DB, id, table.Task{})
 	if err != nil {
 		httputil.NewError(c, http.StatusInternalServerError, err)
 		return
